src/Domain/Compiler/Tests/Expression/BinaryExpression/NonSupportedTypes/__Baselines__/BinaryExpression_NonSupportedTypes_LeftRight-StashIr.error
error: Undefined binary operator for type 'bool'.
--> main.hs:7:21
  | 
7 |         return true + true;
  |                     ^
